Use UTF-8 if the charset can't encode the string.

Hopefully the call to canEncode() won't affect the performance too
much...

BUG: 263761
(cherry picked from commit 7b75f8a769ef0e40e59dedb1327ff0ed51e63ba9)